membuat file myprofile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">praktikum_2</string>
     <string name="title">Teknologi Informasi</string>
     <string name="copy">Copyright - GIbran Fathoni</string>
-    <string name="name">Gibran Fathoni Belva</string>
+    <string name="name">Gibran Fathoni</string>
     <string name="univ">Universitas Muhammadiyah Yogyakarta</string>
     <string name="alamat">Gamping, Sleman</string>
 </resources>
