menambahkan username ke dalam resource string

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="name">Gibran Fathoni</string>
     <string name="univ">Universitas Muhammadiyah Yogyakarta</string>
     <string name="alamat">Gamping, Sleman</string>
+    <string name="username">\@fathonigib_</string>
 </resources>
